--- a/hollow_katana/hollow_katana/hollow_katana.vcxproj.filters
+++ b/hollow_katana/hollow_katana/hollow_katana.vcxproj.filters
@@ -266,5 +266,8 @@
     <ClInclude Include="scene_manager.h">
       <Filter>头文件\manager\scene</Filter>
     </ClInclude>
+    <ClInclude Include="platform.h">
+      <Filter>头文件\property</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
