--- a/hollow_katana/hollow_katana/hollow_katana.vcxproj.filters
+++ b/hollow_katana/hollow_katana/hollow_katana.vcxproj.filters
@@ -269,5 +269,8 @@
     <ClInclude Include="platform.h">
       <Filter>头文件\property</Filter>
     </ClInclude>
+    <ClInclude Include="interact_prop.h">
+      <Filter>头文件\property</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
