哈基米：优化多次游戏 | 生化鸡：细节补充1

--- a/ChickenEvil/ChickenEvil/ChickenEvil.vcxproj.filters
+++ b/ChickenEvil/ChickenEvil/ChickenEvil.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="bullet.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="particle_effect.h">
+      <Filter>头文件\manager\particle</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
