--- a/ChickenEvil/ChickenEvil/ChickenEvil.vcxproj
+++ b/ChickenEvil/ChickenEvil/ChickenEvil.vcxproj
@@ -104,10 +104,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>..\thirdparty\SDL2-2.30.9\include;..\thirdparty\SDL2_ttf-2.22.0\include;..\thirdparty\SDL2_mixer-2.8.0\include;..\thirdparty\SDL2_image-2.8.2\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>..\thirdparty\SDL2-2.30.9\lib\x64;..\thirdparty\SDL2_ttf-2.22.0\lib\x64;..\thirdparty\SDL2_mixer-2.8.0\lib\x64;..\thirdparty\SDL2_image-2.8.2\lib\x64</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2_image.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -126,8 +129,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\thirdparty\SDL2-2.30.9\lib\x64;..\thirdparty\SDL2_ttf-2.22.0\lib\x64;..\thirdparty\SDL2_mixer-2.8.0\lib\x64;..\thirdparty\SDL2_image-2.8.2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\thirdparty\SDL2-2.30.9\lib\x64;..\thirdparty\SDL2_ttf-2.22.0\lib\x64;..\thirdparty\SDL2_mixer-2.8.0\lib\x64;..\thirdparty\SDL2_image-2.8.2\lib\x64</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2_image.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -147,6 +150,7 @@
     <ClInclude Include="collision_box.h" />
     <ClInclude Include="collision_layer.h" />
     <ClInclude Include="collision_manager.h" />
+    <ClInclude Include="particle_effect.h" />
     <ClInclude Include="turrent.h" />
     <ClInclude Include="particle_manager.h" />
     <ClInclude Include="resources_manager.h" />
