--- a/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj.filters
+++ b/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="delivery_driver.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="demo.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="dialogue_manager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resources_manager.h">
@@ -72,6 +78,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="delivery_driver.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="dialogue_manager.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
