--- a/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj.filters
+++ b/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="dialogue_manager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="scene_manager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resources_manager.h">
@@ -81,6 +84,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="dialogue_manager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="scene_manager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="scene.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
