--- a/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj
+++ b/GroupMealsLegend/GroupMealsLegend/GroupMealsLegend.vcxproj
@@ -142,23 +142,28 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="buondle.cpp" />
+    <ClCompile Include="concrete_scene.cpp" />
     <ClCompile Include="cursor_manager.cpp" />
     <ClCompile Include="delivery_driver.cpp" />
-    <ClCompile Include="demo.cpp" />
     <ClCompile Include="dialogue_manager.cpp" />
+    <ClCompile Include="game_system.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="microwave_oven.cpp" />
     <ClCompile Include="region_manager.cpp" />
     <ClCompile Include="resources_manager.cpp" />
+    <ClCompile Include="scene.cpp" />
     <ClCompile Include="scene_manager.cpp" />
     <ClCompile Include="takeout_box.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bundle.h" />
+    <ClInclude Include="concrete_scene.h" />
     <ClInclude Include="delivery_driver.h" />
     <ClInclude Include="dialogue_manager.h" />
+    <ClInclude Include="game_system.h" />
     <ClInclude Include="goods_bundle.h" />
     <ClInclude Include="cursor_manager.h" />
+    <ClInclude Include="kits.h" />
     <ClInclude Include="meal.h" />
     <ClInclude Include="microwave_oven.h" />
     <ClInclude Include="region.h" />
